--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script defer class="remove" src="https://www.w3.org/Tools/respec/respec-w3c"></script>
     <script class="remove">
     var respecConfig = {
-        shortName: "wm-session-flow",
+        shortName: "wm-flows",
         specStatus: "unofficial",
         noRecTrack: true,
         edDraftURI: "n/a",
@@ -55,6 +55,10 @@
                 title: "Open Payments Wallet Address Server",
                 href: "https://openpayments.dev/apis/wallet-address-server/",
             },
+            opas: {
+                title: "Open Payments Auth Server",
+                href: "https://openpayments.dev/apis/auth-server/",
+            },
             GNAP: {
                 title: "GNAP",
                 href: "https://datatracker.ietf.org/doc/html/draft-ietf-gnap-core-protocol",
@@ -73,6 +77,9 @@
             "webidl",
             "request",
             "infra",
+            "fetch",
+            "url",
+            "mimesniff",
         ],
     };
     </script>
