--- a/section/introduction.html
+++ b/section/introduction.html
@@ -9,4 +9,12 @@
         [[[openpayments]]] (<abbr title="Open Payments">OP</abbr>) calls.
         This document details the procedures and protocols involved.
     </p>
+
+    <p class="note">
+        [Ongoing discussions] The specification assumes that the parties are using the same [=asset code=] and [=asset scale=]. Cross currency scenarios will be defined later on.
+    </p>
+
+    <p class="note">
+        [Ongoing discussions] The specification assumes that a payment sessions will start without user interaction.
+    </p>
 </section>
